@@ -5,6 +5,7 @@
 3. Refresh player status after start/stop 'Random Mix'.
 4. Try to fix buttons, etc, in 'Extras' items opening new windows.
 5. Fix custom combobox being unset for plugin settings pages.
+6. Allow settings pages to use more width.
 
 5.0.3
 -----
